fix wrong font url

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -26,7 +26,7 @@
 
 @font-face {
     font-family: "haptik";
-    src: url("/fonts/GT-Haptik-bold.woff2") format('woff2');
+    src: url("/fonts/GT-Haptik-Bold.woff2") format('woff2');
     font-weight: bold;
     font-style: normal;
 }
